force-app/main/default/objects/Application__c/fields/Discontinuation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discontinuation_Reason__c</fullName>
    <label>Discontinuation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hired more qualified</fullName>
            </value>
            <value>
                <fullName>Missing key skills(s)</fullName>
            </value>
            <value>
                <fullName>Ghosted</fullName>
            </value>
            <value>
                <fullName>Compensation expectations</fullName>
            </value>
            <value>
                <fullName>Culture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>