force-app/main/default/objects/Application__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Job Search Tracker relationship to Role</description>
    <inlineHelpText>What Role is this Application for?</inlineHelpText>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>