force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
                <default>true</default>
                <label>Applied</label>
            </value>
            <value>
                <fullName>First Round Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>First Round Interview Completed</fullName>
            </value>
            <value>
                <fullName>Second Round Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>Second Round Interview Completed</fullName>
            </value>
            <value>
                <fullName>Third+ Round Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>Third+ Round Interview Completed</fullName>
            </value>
            <value>
                <fullName>Offer Negotiation</fullName>
            </value>
            <value>
                <fullName>Final Offer Extended</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Discontinued by Applicant</fullName>
            </value>
            <value>
                <fullName>Discontinued by Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>