force-app/main/default/objects/Application__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>The date the application was submitted or the date a recruiter said they submitted the profile.</inlineHelpText>
    <label>Submission Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>