force-app/main/default/objects/Application__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of application</description>
    <inlineHelpText>How was the application was submitted?</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn Easy Apply</fullName>
            </value>
            <value>
                <fullName>Company Portal</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>Dice</fullName>
            </value>
            <value>
                <fullName>ZipRecruiter</fullName>
            </value>
            <value>
                <fullName>Other Job Board</fullName>
            </value>
            <value>
                <fullName>Internal Recruiter</fullName>
            </value>
            <value>
                <fullName>External Recruiter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>