force-app/main/default/objects/Application__c/validationRules/RequireDiscReasonWhenStatusStopped.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireDiscReasonWhenStatusStopped</fullName>
    <active>true</active>
    <description>Require a value in Discontinuation Reason when the status is either Applicant Stopped or Company Stopped</description>
    <errorConditionFormula>(ISPICKVAL( Status__c, &apos;Applicant Stopped&apos;) || ISPICKVAL( Status__c, &apos;Company Stopped&apos;) ) &amp;&amp;  ISPICKVAL( Discontinuation_Reason__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Discontinuation_Reason__c</errorDisplayField>
    <errorMessage>Choose a value for Discontinuation Reason</errorMessage>
</ValidationRule>